# architext

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  install.sh  justfile  package-lock.json  package.json
crates/architext-cli/: Cargo.toml  build.rs
crates/architext-cli/src/: args.rs  main.rs  usage.rs
crates/architext-cli/src/commands/: build.rs  clean.rs  doctor.rs  explain.rs  mod.rs  prompt.rs  skill.rs  status.rs  update.rs  validate.rs
crates/architext-cli/src/commands/serve/: helpers.rs  mod.rs  process_control.rs  state.rs
crates/architext-cli/src/commands/sync/: branch.rs  gitignore.rs  instruction_files.rs  metadata.rs  mod.rs  root_scripts.rs  starter_data.rs  status_printer.rs  target_layout.rs  timestamp.rs
crates/architext-core/: Cargo.toml
crates/architext-core/src/: json_write.rs  lib.rs  status.rs
crates/architext-core/src/domain/: c4_quality.rs  doctor_repairs.rs  instruction_rules.rs  mod.rs  notes.rs  release.rs  release_recovery.rs  rules.rs  schema_migration.rs  sync_plan.rs
crates/architext-core/src/validation/: mod.rs  references.rs  release.rs  schema.rs
crates/architext-core/tests/conformance/invalid-dangling-ref/: flows.json  nodes.json  views.json
crates/architext-core/tests/conformance/invalid-duplicate-id/: flows.json  nodes.json
crates/architext-core/tests/conformance/invalid-ref-decision-related-flows/: decisions.json
crates/architext-core/tests/conformance/invalid-ref-decision-related-nodes/: decisions.json
crates/architext-core/tests/conformance/invalid-ref-default-view-id/: manifest.json
crates/architext-core/tests/conformance/invalid-ref-duplicate-lane-id/: views.json
crates/architext-core/tests/conformance/invalid-ref-duplicate-step-id/: flows.json  nodes.json
crates/architext-core/tests/conformance/invalid-ref-flow-actors/: decisions.json  flows.json
crates/architext-core/tests/conformance/invalid-ref-node-data-handled/: manifest.json  nodes.json  risks.json
crates/architext-core/tests/conformance/invalid-ref-node-dependencies/: nodes.json
crates/architext-core/tests/conformance/invalid-ref-node-known-risks/: nodes.json
crates/architext-core/tests/conformance/invalid-ref-node-related-decisions/: nodes.json
crates/architext-core/tests/conformance/invalid-ref-node-related-flows/: nodes.json
crates/architext-core/tests/conformance/invalid-ref-note-target/: manifest.json  notes.json
crates/architext-core/tests/conformance/invalid-ref-risk-related-flows/: risks.json
crates/architext-core/tests/conformance/invalid-ref-risk-related-nodes/: risks.json
crates/architext-core/tests/conformance/invalid-ref-sequence-frame-step-ids/: flows.json
crates/architext-core/tests/conformance/invalid-ref-step-data/: flows.json
crates/architext-core/tests/conformance/invalid-ref-step-from/: flows.json
crates/architext-core/tests/jsonwrite-fixtures/: array-of-objects.json  booleans-null.json  deep-nesting.json  floats.json  integers.json  mixed.json  nested-empties.json  strings.json
crates/architext-routing/: Cargo.toml
crates/architext-routing/src/: diagram_config.rs  js_compat.rs  lib.rs  model.rs  plan_diagram.rs  precompute.rs  priority_queue.rs  route_cache.rs  route_candidate_builders.rs  route_candidate_ports.rs  route_constants.rs  route_corridors.rs  route_diagnostics.rs  route_edges.rs  route_geometry.rs  route_index.rs  route_intent.rs  route_labels.rs  route_mount_model.rs  route_ports.rs  route_reciprocal.rs  route_rendering.rs  route_scoring.rs  route_strategies.rs  route_style.rs  wasm.rs
crates/architext-routing/src/plan_request/: c4_layout.rs  decision_branch.rs  diagram_layout.rs  flow_step_display.rs  mod.rs  plan_key.rs  relationship_label.rs  types.rs  view_selection.rs
crates/architext-routing/src/route_edges/: construction.rs  crossings.rs  helpers.rs  inputs.rs  mod.rs  orchestration.rs  separation.rs  types.rs
crates/architext-routing/src/route_model/: audit.rs  component2.rs  mod.rs  place.rs  select.rs
crates/architext-routing/src/route_mount_model/: cost.rs  distribution.rs  helpers.rs  mod.rs  optimize.rs  reciprocal.rs  relief.rs  types.rs
crates/architext-routing/tests/: codec_roundtrip.rs  corpus_fitness.rs  decision_stem_geometry.rs  number_format_parity.rs
crates/architext-routing/tests/fixtures/: corpus-fitness-baseline.json  plan-diagram-input-copied-install-migration.json  plan-diagram-input-fresh-install.json  plan-sample.json
crates/architext-serve/: Cargo.toml  build.rs
crates/architext-serve/src/: content_type.rs  embedded_viewer.rs  farm_state.rs  lib.rs  safe_join.rs  security.rs  watch_hub.rs  write_txn.rs
crates/architext-serve/src/handlers/: api_fallback.rs  config_payload.rs  config_write.rs  data.rs  data_events.rs  doctor.rs  file_preview.rs  mod.rs  node_git.rs  notes.rs  plan.rs  release_plans.rs  repo_tree.rs  rules.rs  session.rs  static_files.rs  status.rs  sync_repair.rs
crates/architext-serve/tests/: bound_server.rs
crates/architext-viewer/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/architext-viewer/src/: blast_radius.rs  flow_step_display.rs  lib.rs  main.rs  release_planning_model.rs  release_truth.rs  repo_tree_model.rs  rule_order.rs  selection.rs  severity.rs  state.rs  theme.rs
crates/architext-viewer/src/components/: blast_radius_panel.rs  c4_breadcrumb.rs  canvas_panel.rs  config_field.rs  config_panel.rs  data_risks_panel.rs  header.rs  inspector_panel.rs  left_nav.rs  legend.rs  mod.rs  mode_icon.rs  mode_list.rs  node_icon.rs  notes_editor.rs  relationship_icon.rs  release_planning.rs  release_trend_chart.rs  release_truth_panel.rs  repo_tree.rs  rules_editor.rs  rules_panel.rs  selector_bar.rs  shell.rs  spinner.rs  steps_panel.rs  wordmark.rs
crates/architext-viewer/src/data/: fetch.rs  live.rs  mod.rs  models.rs  mutate.rs
crates/architext-viewer/src/diagram/: edge.rs  label.rs  mod.rs  node.rs  pill_placement.rs  plan.rs  sequence.rs  sequence_svg.rs  svg.rs
(+641 files in other folders)
