[package]
name = "architext-cli"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "architext"
path = "src/main.rs"

[dependencies]
architext-core = { path = "../architext-core" }
architext-serve = { path = "../architext-serve" }
axum = { version = "0.7", features = ["http1", "http2", "tokio"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
