[package]
name = "architext-cli"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "architext"
path = "src/main.rs"

[dependencies]
architext-core = { path = "../architext-core" }
architext-serve = { path = "../architext-serve" }
axum = { version = "0.7", features = ["http1", "http2", "tokio"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
# Minimal blocking HTTP client for `architext update` (download release binary +
# checksums from GitHub). rustls TLS so there is no system OpenSSL dependency.
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
# build.rs reads the product version out of the repo's package.json.
serde_json = { version = "1" }

[dev-dependencies]
tempfile = "3"
