[package]
name = "architext-core"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[dependencies]
jsonschema = { version = "0.46.5", default-features = false, features = ["resolve-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
