[package]
name = "architext-core"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "domain_dump"
path = "src/bin/domain_dump.rs"

[[bin]]
name = "jsonwrite_dump"
path = "src/bin/jsonwrite_dump.rs"

[[bin]]
name = "status_dump"
path = "src/bin/status_dump.rs"

[dependencies]
jsonschema = { version = "0.46.5", default-features = false, features = ["resolve-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
architext-routing = { path = "../architext-routing" }
indexmap = { version = "2", features = ["serde"] }
regex = { version = "1", features = ["std"] }
# Embed the JSON schemas into the binary so an installed native CLI validates
# without a repo-relative `viewer/schema/` on disk — the schema-delivery half of
# making the standalone binary self-contained (prerequisite for the JS cutover).
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
