[package]
name = "architext-routing"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[features]
wasm = ["dep:wasm-bindgen"]

[dependencies]
libm = "0.2"
ryu-js = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
