[package]
name = "architext-routing"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "farm_dump"
path = "src/bin/farm_dump.rs"
required-features = ["native"]

[features]
wasm = ["dep:wasm-bindgen"]
native = ["dep:rayon", "dep:sha2", "dep:hex"]

[dependencies]
libm = "0.2"
ryu-js = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
wasm-bindgen = { version = "0.2", optional = true }
rayon = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
