[package]
name = "architext-serve"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "architext-serve"
path = "src/bin/architext-serve.rs"

[dependencies]
architext-routing = { path = "../architext-routing", features = ["native"] }
architext-core = { path = "../architext-core" }
axum = { version = "0.7", features = ["http1", "http2", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3" }
notify = { version = "6" }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rand = "0.8"
url = "2"
# Server-side syntax highlighting for /api/file. Pure-Rust regex engine
# (fancy-regex) instead of the default Oniguruma C binding, so the native
# build needs no C toolchain.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Embed the Trunk-built viewer dist into the binary so a standalone native install
# (curl installer / `architext update`) serves the viewer with no co-located files.
# Release builds bake the dist in; debug builds read the folder at runtime.
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
