[package]
name = "architext-viewer"
version = "0.0.0"
edition = "2021"
publish = false

# CSR wasm app. cdylib is the wasm-bindgen entry; rlib lets `cargo test`/docs
# work on native. The crate only builds meaningfully for wasm32 (Leptos CSR),
# so it is excluded from the workspace default-members (see workspace Cargo.toml)
# to keep `cargo build --workspace` on native targets green.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Routing engine, wired now so later slices call plan() in-process. The `wasm`
# feature exposes the #[wasm_bindgen] plan() boundary; we depend on it with that
# feature so the viewer wasm bundle carries the planner.
architext-routing = { path = "../architext-routing", features = ["wasm"] }

leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# Pan/zoom-fit needs to measure the canvas viewport (DomRect from the container
# element). The wheel/mouse event TYPES come from Leptos's typed event handlers;
# we only need web-sys for the element measurement, declared explicitly rather
# than relying on transitive feature enablement.
web-sys = { version = "0.3", features = [
    "DomRect",
    "Element",
    # Live-reload: SSE consumer over the serve `/api/data-events` stream.
    "EventSource",
    "MessageEvent",
    "Event",
] }

# Same-origin async fetch of the Architext data docs (/data/**, /api/config)
# and the serve plan farm (/api/plan/{hash}).
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sha256 of the plan key → the `/api/plan/{hash}` farm cache key. Pure-Rust,
# compiles to wasm32; we deliberately do NOT use
# `architext_routing::precompute::plan_key_hash_native` (it needs the native
# feature and returns "" on wasm).
sha2 = "0.10"
